[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Snake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/InGame.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Snake = ExtResource( 3 )

[node name="Menu" parent="." instance=ExtResource( 1 )]
Snake = ExtResource( 3 )

[node name="InGame" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="hof" from="Menu" to="." method="_on_Menu_hof"]
[connection signal="play" from="Menu" to="." method="_on_Menu_play"]
[connection signal="quit" from="Menu" to="." method="_on_Menu_quit"]
